--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
         
-        <div calss = "page" id ="project-details" style="display: none;">
+        <div calss = "page" id ="project-details" style="display: none; flex-direction: column;">
             <header>
                 <div>
                     <h2 data-project-info = "name">Hospital Center</h2>
@@ -113,7 +113,7 @@
                 <div style="display: flex; flex-direction: column; row-gap: 30px;">
                   <div class="dashboard-card" style="padding: 30px 0;">
                     <div style="display: flex; justify-content: space-between; align-items: center; padding: 0px 30px; margin-bottom: 30px;">
-                      <p style="font-size: 20px; background-color: #ca8134; aspect-ratio: 1; border-radius: 100%; padding: 12px;">HC</p>
+                      <p data-project-info = "card-initials" style="font-size: 20px; background-color: #ca8134; aspect-ratio: 1; border-radius: 100%; padding: 12px;">HC</p>
                       <button class="btn-secondary"><p style="width: 100%;">Edit</p></button>
                     </div>
                   <div style="padding: 0 30px;">
